# ai-agent-handoff-hub

./: .env.example  .gitignore  CODEX.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ai-agent-handoff.yml
docs/: agent-handoff.md  architecture.md  setup.md
src/ai_agent_handoff_hub/: __init__.py  __main__.py  cli.py  config.py  github_api.py  models.py  planner.py  reporting.py  scanner.py
src/ai_agent_handoff_hub/integrations/: google_tasks.py  notion.py
tests/: test_cli.py  test_planner.py  test_reporting.py  test_scanner.py
